--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <header>CAT MANIA</header>
 <body>
     <p>Cats are my favorite animal. They are beautiful and affectionate.</p>
-    <img url="https://http.cat/100" cute kitty>
+    <img src="https://http.cat/100" cute kitty /img>
 </body>
 </html>
