--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <header>CAT MANIA</header>
 <body>
-    <p>Cats are my favorite animal. They are beautiful and affectionate.</p>
+    <p>Cats are my favorite animal. They are beautiful and affectionate. I am a crazy cat lady and I will die alone.</p>
     <img src="https://http.cat/100" cute kitty /img>
 </body>
 </html>
