--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <header>CAT MANIA</header>
 <body>
     <p>Cats are my favorite animal. They are beautiful and affectionate. I am a crazy cat lady and I will die alone.</p>
-    <img src="https://http.cat/100" cute kitty /img>
+    <img src="https://peopledotcom.files.wordpress.com/2017/12/smush-the-cat-1.jpg
+" cute kitty /img>
 </body>
 </html>
