--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <header>CAT MANIA</header>
 <body>
     <p>Cats are my favorite animal. They are beautiful and affectionate. I am a crazy cat lady and I will die alone.</p>
-    <img src="https://peopledotcom.files.wordpress.com/2017/12/smush-the-cat-1.jpg
-" cute kitty /img>
+    <img src="https://64.media.tumblr.com/tumblr_lugsodPWWM1qd6s2yo1_500.gifv" cute kitty /img>
 </body>
 </html>
